fix color contrast

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
 
-$desaturated-dark-cyan: hsl(180, 29%, 50%);
+$desaturated-dark-cyan: hsl(180, 29%, 37%);
 $light-grayish-cyan: /*(Background)*/ hsl(180, 52%, 96%);
-$light-grayish-cyan2: /*(Filter Tablets)*/ hsl(180, 31%, 95%);
-$dark-grayish-cyan: hsl(180, 8%, 52%);
+$light-grayish-cyan2: /*(Filter Tablets)*/ hsl(180, 20%, 96%);
+$dark-grayish-cyan: hsl(180, 8%, 44%);
 $very-dark-grayish-cyan: hsl(180, 14%, 20%);
 
 * {
